examples/errors/type_mutual.stlc
A : Type
A = B

B : Type
B = A
